# procnote

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Cargo.toml  EVENT_LOG_COMPAT.md  LICENSE-MIT  README.md  _typos.toml  biome.json  justfile  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  renovate.json5  vite.config.ts  zensical.toml
.cargo/: config.toml
.github/workflows/: docs.yaml  lint-frontend.yaml  lint-rust.yaml  release.yaml  update-homebrew.yaml
crates/procnote-cli/: Cargo.toml
crates/procnote-cli/src/: main.rs
crates/procnote-core/: Cargo.toml
crates/procnote-core/src/: lib.rs
crates/procnote-core/src/event/: log.rs  mod.rs  types.rs
crates/procnote-core/src/execution/: engine.rs
crates/procnote-core/src/template/: mod.rs  parser.rs  types.rs
crates/procnote-core/tests/: fixture_tests.rs  minimal_json_tests.rs
crates/procnote-core/tests/fixtures/: v1_all_event_types.jsonl  v1_basic_execution.jsonl  v1_with_reverts.jsonl  v1_with_unknown_events.jsonl
docs/: development.md  index.md
docs/concepts/: crash-safety.md  executions-and-events.md  index.md  templates.md
docs/guide/: index.md  running-an-execution.md  writing-a-template.md
procedures/: example-inspection.md  example-tvt.md
procedures/example-tvt/: template.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/nsis/: hooks.nsh
src-tauri/src/: lib.rs  main.rs  state.rs
src-tauri/src/commands/: execution.rs  mod.rs  template.rs
src/lib/api/: commands.ts
src/lib/components/: AddStepDialog.svelte  AttachmentField.svelte  CheckboxItem.svelte  DeviationDialog.svelte  EditStepDialog.svelte  InputField.svelte  Modal.svelte  NoteEditor.svelte  StepCard.svelte  TemplateList.svelte  TrashIcon.svelte
src/lib/stores/: execution.svelte.ts
src/lib/types/: index.ts
src/lib/utils/: format.ts  mime.ts
src/routes/: +layout.svelte  +page.svelte
src/routes/execution/[id]/: +page.svelte
