[workspace]
members = ["src-tauri", "crates/procnote-core"]
resolver = "3"

[workspace.dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
pulldown-cmark = "0.13.0"
serde_yaml_ng = "0.10.0"
thiserror = "2.0.18"
log = "0.4"
tauri = { version = "2.9.5", features = [] }
tauri-build = { version = "2.5.3", features = [] }
tauri-plugin-log = "2"
chrono = { version = "0.4.43", features = ["serde"] }
uuid = { version = "1.20.0", features = ["v4", "serde"] }
tempfile = "3.24.0"
clap = { version = "4.5.56", features = ["derive"] }
