[workspace]
resolver = "3"
members = ["crates/procnote-core", "src-tauri"]

[workspace.dependencies]
chrono = { version = "0.4.43", features = ["serde"] }
clap = { version = "4.5.56", features = ["derive"] }
log = "0.4"
names = { version = "0.14.0", default-features = false }
pulldown-cmark = "0.13.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml_ng = "0.10.0"
tauri = { version = "2.9.5", features = [] }
tauri-build = { version = "2.5.3", features = [] }
tauri-plugin-log = "2"
tempfile = "3.24.0"
thiserror = "2.0.18"
uuid = { version = "1.20.0", features = ["serde", "v4"] }
