[package]
name = "procnote-tauri"
version = "0.1.0"
description = "procnote - Procedure execution tool for hardware testing"
authors = ["Nomura"]
license = ""
repository = ""
edition = "2024"

[lib]
name = "procnote_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build.workspace = true

[dependencies]
procnote-core = { path = "../crates/procnote-core" }
serde_json.workspace = true
serde.workspace = true
log.workspace = true
uuid.workspace = true
tauri.workspace = true
tauri-plugin-log.workspace = true
clap.workspace = true
