[package]
name = "procnote-tauri"
version = "0.1.0"
edition = "2024"
description = "procnote - Procedure execution tool for hardware testing"
repository = ""
license = ""

[lib]
crate-type = ["cdylib", "rlib", "staticlib"]
name = "procnote_tauri_lib"

[dependencies]
chrono.workspace = true
clap.workspace = true
log.workspace = true
procnote-core = { path = "../crates/procnote-core" }
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tauri.workspace = true
tauri-plugin-dialog.workspace = true
tauri-plugin-log.workspace = true
ts-rs.workspace = true
uuid.workspace = true

[build-dependencies]
tauri-build.workspace = true
