[package]
name = "procnote-core"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono.workspace = true
names.workspace = true
pulldown-cmark.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml_ng.workspace = true
thiserror.workspace = true
uuid.workspace = true

[dev-dependencies]
tempfile.workspace = true
