[package]
name = "procnote-core"
version = "0.1.0"
edition = "2024"
repository.workspace = true
license.workspace = true

[dependencies]
chrono.workspace = true
log.workspace = true
names.workspace = true
pulldown-cmark.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml_ng.workspace = true
thiserror.workspace = true
ts-rs.workspace = true
uuid.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
