[package]
name = "procnote-core"
# Version not tracked here; see src-tauri/tauri.conf.json for the release version.
version = "0.0.0"
edition = "2024"
description.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
chrono.workspace = true
log.workspace = true
names.workspace = true
pulldown-cmark.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml_ng.workspace = true
thiserror.workspace = true
ts-rs.workspace = true
uuid.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
